

                 SCons - a software construction tool

                            Change Log

NOTE: The 4.0.0 Release of SCons will drops Python 2.7 Support

RELEASE 4.1.0.devyyyymmdd - Mon, 04 Jul 2020 16:06:40 -0700

      From John Doe:

        - Whatever John Doe did.

    
RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000

  From Dirk Baechle:
    - Updated documentation toolchain to work properly under Python3, also
      removed libxslt support from the Docbook Tool. (issue #3580)
    - Added Docker images for building and testing SCons. (issue #3585)

  From James Benton:
    - Improve Visual Studio solution/project generation code to add support
      for a per-variant cppflags. Intellisense can be affected by cppflags,
      this is especially important when it comes to /std:c++* which specifies
      what C++ standard version to target. SCons will append /Zc:__cplusplus
      to the project's cppflags when a /std:c++* flag is found as this is
      required for intellisense to use the C++ standard version from cppflags.

  From Rob Boehne
    - Specify UTF-8 encoding when opening Java source file as text.  By default, encoding is the output
    of locale.getpreferredencoding(False), and varies by platform.

  From Joseph Brill:
    - MSVC updates: When there are multiple product installations (e.g, Community and
      Build Tools) of MSVC 2017 or MSVC 2019, an Enterprise, Professional, 
      or Community installation will be selected before a Build Tools installation when
      "14.1" or "14.2" is requested, respectively. (GH Issue #3699).
    - MSVC updates: When there are multiple product installations of MSVC 2017 (e.g.,
      Community and Express), 2017 Express is no longer returned when "14.1" is
      requested.  Only 2017 Express will be returned when "14.1Exp" is requested.
      (GH Issue #3699).
    - MSVC updates: An MSVC 6.0 installation now appears in the installed versions list
      when msvc debug output is enabled (GH Issue #3699).